deploy/base/envida-node/ehrbase-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envida-ehrbase
  namespace: dh-health
  labels:
    app: envida-ehrbase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envida-ehrbase
  template:
    metadata:
      labels:
        app: envida-ehrbase
    spec:
      containers:
      - name: envida-ehrbase
        image: ehrbase/ehrbase:2.6.0
        ports:
        - containerPort: 8080
        command:
          - "java"
        args:
          - "-jar"
          - "-Dspring.profiles.active=docker"
          - "-Dlogging.file.name=/usr/share/logs/envida/ehrbase.log"
          - "ehrbase.jar"
        livenessProbe:
          httpGet:
            path: /ehrbase/management/health
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /ehrbase/management/health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: logs-volume
          mountPath: /usr/share/logs
      volumes:
      - name: logs-volume
        persistentVolumeClaim:
          claimName: log-pvc
