deploy/base/envida-node/ehrdb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envida-ehrdb
  namespace: dh-health
  labels:
    app: envida-ehrdb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envida-ehrdb
  template:
    metadata:
      labels:
        app: envida-ehrdb
    spec:
      volumes:
      - name: postgres-logs
        persistentVolumeClaim:
          claimName: log-pvc
      containers:
      - name: envida-ehrdb
        image: ehrbase/ehrbase-v2-postgres:16.2
        ports:
        - containerPort: 5432
        args:
        - postgres
        - -c
        - logging_collector=on
        - -c
        - log_directory=/var/log/postgresql
        - -c
        - log_filename=postgresql.log
        - -c
        - log_statement=none
        - -c
        - log_file_mode=0644
        - -c
        - log_rotation_age=0
        - -c
        - log_rotation_size=0
        livenessProbe:
          exec:
            command:
            - pg_isready
            - -U
            - postgres
          initialDelaySeconds: 30
          periodSeconds: 10
        volumeMounts:
        - name: postgres-logs
          mountPath: /var/log/postgresql
          subPath: envida
