deploy/base/envida-node/etl-zib-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envida-etl-zib
  namespace: dh-health
  labels:
    app: envida-etl-zib
spec:
  replicas: 1
  selector:
    matchLabels:
      app: envida-etl-zib
  template:
    metadata:
      labels:
        app: envida-etl-zib
    spec:
      containers:
      - name: envida-etl-zib
        image: docker-health/etl-zib:latest
        volumeMounts:
        - name: logs
          mountPath: /code/logs/envida
        - name: outputs
          mountPath: /code/outputs
        - name: data
          mountPath: /code/data/envida-demo-data
        - name: etl
          mountPath: /code
        - name: templates
          mountPath: /code/data/templates
      volumes:
      - name: logs
        hostPath:
          path: /mnt/filebeat/logs/envida/etl-zib/
          type: Directory
      - name: outputs
        hostPath:
          path: /mnt/outputs/etl-zib
          type: DirectoryOrCreate
      - name: data
        hostPath:
          path: /mnt/data/envida-demo-data
          type: Directory
      - name: etl
        hostPath:
          path: /mnt/externals/dh-hdp-etl
          type: Directory
      - name: templates
        hostPath:
          path: /mnt/externals/dh-hdp-zib-templates/opt-templates
          type: Directory
