deploy/base/envida-node/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: envida-portal
  namespace: dh-health
spec:
  selector:
    app: envida-portal
  ports:
  - port: 80
    targetPort: 80
    name: http
  type: ClusterIP
